# MonoCamera

./: CMakeLists.txt  ObjPos.txt  README.md  package.xml  video.avi
launch/: findObject.launch
msg/: object.msg
src/: MonoCamera.cpp  getHsv.cpp  listener.cpp
